# driver-fatigue-monitoring

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  ui_app.py
alerts/: alarm.py  ntfy_alert.py  whatsapp_alert.py
config/: settings.py
detectors/: drowsiness_detector.py  eye_utils.py
scoring/: confidence_score.py
storage/: event_logger.py
